# py-amazing-marvin

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
specs/: CONSTITUTION.md
specs/001-py-amazing-marvin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-py-amazing-marvin/checklists/: requirements.md
specs/001-py-amazing-marvin/contracts/: exceptions.md  public-api.md
src/amazing_marvin/: __init__.py  _throttle.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_auth.py  test_coverage_assertion.py  test_coverage_gaps.py  test_endpoints.py  test_errors.py  test_lifecycle.py  test_models.py  test_quickstart.py  test_throttle.py  test_timezone.py
