[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazing-marvin"
version = "0.1.0"
description = "Async Python client for the Amazing Marvin API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "jjsmackay" }]
keywords = ["amazing-marvin", "productivity", "async", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "mypy>=1.9",
    "ruff>=0.4",
    "pytest-cov>=5",
]

[project.urls]
Homepage = "https://github.com/jjsmackay/py-amazing-marvin"
Source = "https://github.com/jjsmackay/py-amazing-marvin"

[tool.hatch.build.targets.wheel]
packages = ["src/amazing_marvin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
